# cartelas

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: auth.py  convert.py  dither.py  dither2.py  logging_config.py  main.py  models.py  openai_client.py  renderer.py  storage.py  tri_studio.py  utils.py
data/: cards.json
web/: app.js  index.html  login.html  styles.css
